Corrected tab link width and content alignment

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -64,7 +64,9 @@
   padding-bottom: 10px;
 }
 .tabs .tabs-item-selected {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 .tabs .tabs-links {
   display: flex;
@@ -78,6 +80,7 @@
   border-right: 1px solid #D6D9CE;
   margin: 0;
   color: #F3DAD8;
+  width: 100%;
   cursor: pointer;
 }
 .tabs .tabs-link:hover {
